# hshare-lab-v2

./: .gitignore  AGENTS.md  CHANGELOG.md  CLEANING_SPEC.md  DATA_CONTRACT.md  DQA_SPEC.md  LEGACY_STATUS.md  Makefile  PROGRESS.md  QUERY_CONTRACT.md  README.md  RUN_ENV.md  SEMANTIC_2026_FRAMEWORK.md  SEMANTIC_MATRIX.md  STAGE_SCHEMA.md  TASKS.md  pyproject.toml
.codex/: config.toml
Research/: README.md
Scripts/: README.md  __init__.py  build_instrument_profile.py  build_raw_inventory.py  build_stage_parquet.py  build_verified_layer.py  freeze_candidate_cleaned.py  reference_sources.py  report_field_policy_check.py  run_brokerno_validation.py  run_dqa_coverage.py  run_dqa_linkage.py  run_dqa_schema.py  run_information_regime_summary.py  run_semantic_framework.py  run_semantic_idspace.py  run_semantic_lifecycle.py  run_semantic_ordertype.py  run_semantic_session.py  run_semantic_time_anchor.py  run_semantic_tradedir.py  run_semantic_tradedir_contrast.py  run_source_group_inventory.py  run_tradedir_validation.py  run_with_heartbeat_watchdog.py  runtime.py  semantic_contract.py  semantic_report.py  stage_contract.py  sync_ftp_raw.py  sync_instrument_profile_seed.py
config/: reference_sources.example.json
logs/: README.md
manifests/: README.md  golden_sample_manifest.json  golden_sample_manifest.template.json  raw_inventory_completion_criteria_2026-03-15.md
tests/: test_build_raw_inventory.py  test_build_verified_layer.py  test_reference_sources.py  test_report_field_policy_check.py  test_run_dqa_coverage.py  test_run_dqa_linkage.py  test_run_dqa_schema.py  (+13 more)
(+57 files in other folders)
