[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hshare-lab-v2"
version = "0.1.0"
description = "Rebooted Hong Kong tick / order / trade research infrastructure."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.4,<2.0",
  "polars>=1.32,<2.0",
  "pyarrow>=18,<22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]
reference = [
  "pandas>=2.2,<3.0",
  "requests>=2.32,<3.0",
  "tushare>=1.4,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["Scripts"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
